--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/bigcommerce/checkout-js#readme",
   "dependencies": {
-    "@bigcommerce/checkout-sdk": "^1.165.0",
+    "@bigcommerce/checkout-sdk": "git@github.com:bc-leprik/checkout-sdk-js.git#v1.165.1-alpha.0e490efe6326785bde5261772063510201b63e90",
     "@bigcommerce/citadel": "^2.15.1",
     "@bigcommerce/form-poster": "^1.2.2",
     "@bigcommerce/memoize": "^1.0.0",
