--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/bigcommerce/checkout-js#readme",
   "dependencies": {
-    "@bigcommerce/checkout-sdk": "^1.160.0",
+    "@bigcommerce/checkout-sdk": "git@github.com:bc-leprik/checkout-sdk-js.git#v1.160.1-alpha.305d23d361c7450da1239f17a8efaa3791ff9010",
     "@bigcommerce/citadel": "^2.15.1",
     "@bigcommerce/form-poster": "^1.2.2",
     "@bigcommerce/memoize": "^1.0.0",
