--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.151.0",
+    "version": "1.151.1-alpha.1625154552553",
     "authors": [
         "BigCommerce"
     ],
