--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/checkout",
-  "version": "1.151.0",
+  "version": "1.151.1-alpha.1625154552553",
   "private": true,
   "description": "Browser-based application providing a seamless UI for BigCommerce shoppers to complete their checkout.",
   "license": "MIT",
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/bigcommerce/checkout-js#readme",
   "dependencies": {
-    "@bigcommerce/checkout-sdk": "git@github.com:bc-leprik/checkout-sdk-js.git#v1.160.1-alpha.305d23d361c7450da1239f17a8efaa3791ff9010",
+    "@bigcommerce/checkout-sdk": "git+ssh://git@github.com/bc-leprik/checkout-sdk-js.git#v1.160.1-alpha.305d23d361c7450da1239f17a8efaa3791ff9010",
     "@bigcommerce/citadel": "^2.15.1",
     "@bigcommerce/form-poster": "^1.2.2",
     "@bigcommerce/memoize": "^1.0.0",
