--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "checkout-js",
-    "version": "1.157.0",
+    "version": "1.157.1-alpha.1626710742592",
     "authors": [
         "BigCommerce"
     ],
